# search

./: .env  .env.template  .gitignore  CLAUDE.md  main.py  pyproject.toml
deploy/searxng/: configmap.yaml  deployment.yaml  service.yaml
docs/: adr-001-model-selection.md  benchmark-model-comparison.md  langgraph-patterns.md  lfm2.5-chat-template.md  researcher-lfm2.5.ts  writer-lfm2.5.ts
scripts/: searxng.sh
scripts/searxng-config/: settings.yml
src/search/: __init__.py  config.py
src/search/clients/: __init__.py  searxng.py
src/search/graph/: __init__.py  builder.py  nodes.py  state.py
src/search/graph/nodes/: research.py  respond.py  search.py  suggest_queries.py  verify.py
src/search/llm/: __init__.py  client.py  formatter.py  parser.py  prompts.py  tools.py
